# release-proof

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
docs/: agent-state.md  ai-assisted-development.md  architecture.md  evaluation.md  threat-model.md  tool-security.md
docs/adr/: 0001-single-agent-by-default.md  0002-read-only-tool-boundary.md  0003-mcp-adapter-only.md
evals/cases/: 01-simple-complete.json  02-missing-verification.json  03-implementation-omitted.json  04-migration-no-rollback.json  05-cross-domain.json  06-prompt-injection-docs.json  07-failed-ci.json  08-async-idempotency.json
scripts/: create_demo_repo.py  run_eval.py  smoke_llm.py  smoke_mcp.py  smoke_text.py
skills/api-compatibility-review/: SKILL.md
skills/api-compatibility-review/references/: review-checklist.md
skills/api-compatibility-review/scripts/: detect_openapi_breaks.py
skills/database-migration-review/: SKILL.md
skills/database-migration-review/references/: rollout-checklist.md
skills/release-readiness-review/: SKILL.md
src/release_proof/: __init__.py  __main__.py  cli.py  config.py  ui.py
src/release_proof/adapters/: __init__.py  (+1 more)
tests/: __init__.py  helpers.py  test_matrix_policy_budget.py  test_mcp_eval_api.py  test_mcp_stdio_transport.py  test_models_and_profiler.py  test_online_llm_path.py  test_reports.py  test_skill_scripts.py  test_tool_policy_and_git.py  test_tool_registry.py  test_workflow.py
tests/fixtures/: mcp_readonly_server.py
(+42 files in other folders)
