[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "release-proof"
version = "0.1.0"
description = "Evidence-grounded release acceptance agent with read-only tools and human gates"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = {text = "MIT"}
authors = [{name = "ReleaseProof contributors"}]
dependencies = [
  "anthropic>=0.49,<1",
  "defusedxml>=0.7,<1",
  "fastapi>=0.115,<1",
  "jinja2>=3.1,<4",
  "langchain-core>=0.3,<2",
  "langgraph>=1.0,<2",
  "langgraph-checkpoint-sqlite>=3.0,<4",
  "pydantic>=2.10,<3",
  "pydantic-settings>=2.7,<3",
  "pyyaml>=6,<7",
  "streamlit>=1.41,<2",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "pyright>=1.1.390,<2",
  "pytest>=8.3,<9",
  "pytest-cov>=6,<7",
  "ruff>=0.9,<1",
]
mcp = ["mcp>=1.7,<2"]

[project.scripts]
release-proof = "release_proof.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/release_proof"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers --basetemp=runtime/pytest"
testpaths = ["tests"]
markers = [
  "integration: requires an explicitly configured external service",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501", "RUF001", "UP042"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
include = ["src", "tests"]
venvPath = "."
venv = ".venv"
